--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+
+
 .App {
   text-align: center;
 }
-
+div {
+  display: flex;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,4 @@
     transform: rotate(360deg);
   }
 }
+
